        - include t/screenplay/*.t and t/fiction/*.t .
    * lib/XML/Grammar/FictionBase/XSLT/Converter.pm
        - Refactoring: _data_dir now initialized from default => sub { ... }.
        - Refactoring: _rng now initialized from default => sub { ... }.
    * Convert to XML::GrammarBase :
        - lib/XML/Grammar/Fiction/ToHTML.pm
        - lib/XML/Grammar/Fiction/ToDocBook.pm

0.12.5      Sat 27 Apr 14:25:15 IDT 2013
    * Do not try to compile scripts/bump-version-number.pl .
        - Requires File::Find::Object which isn't a dependency.
    * New version of MooX::late to avoid test failures.
        - MooX::late = 0.010

0.12.4      Mon 22 Apr 13:29:13 IDT 2013
    * Add $VERSION to more missing files.

0.12.3      Mon 22 Apr 13:12:59 IDT 2013
    * Add $VERSION to missing files.

0.12.2      Tue  9 Apr 16:41:15 IDT 2013
    * Made error handling more informative.

0.12.1      Tue 26 Mar 06:22:47 IST 2013
    * Add MooX::late to the dependencies to avoid test failures:
        - http://www.cpantesters.org/cpan/report/62d51cec-946e-11e2-b162-c5ed238b44f3

0.12.0      Thu 21 Mar 18:58:59 IST 2013
    * BUG FIX: add the xmlns='http://www.w3.org/1999/xhtml' to the XML
    generated by extradata/screenplay-xml-to-html.xslt - fixed the broken
    tests.

    * Extract some classes into lib/XML/Grammar/Fiction/FromProto/Node/*.

0.11.1      Wed 20 Feb 15:36:55 IST 2013
    * Add $VERSION and =head1 VERSION to the .pm files that missed them.

0.11.0      Wed 20 Feb 13:08:42 IST 2013
    * Add the <img /> tag to the Screenplay.
    * Convert the distribution to use Dist-Zilla.
    * Convert the tests from Test::XML to Test::XML::Ordered.

0.10.0      Sun 13 Jan 08:32:43 IST 2013
    * Add more links to the XML::Grammar::Fiction's perldoc.
    * Convert from Mouse to Moo, MooX and "use MooX 'late'".
    * Add t/00-libxml-basic.t to diagnose the XML::LibXML version.

0.9.3       Tue 31 Jul 09:22:01 IDT 2012